# vex

./: .gitignore  Cargo.toml  DNS_FEATURES.md  PACKET_DUMP.md  PROJECT_SUMMARY.md  PROXY_FEATURES.md  QUICKSTART.md  README.md  README.zh-CN.md  build.rs  config.yaml.example  download_wintun.ps1  issue  issue.md  task.md
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/craftls/: Cargo.toml
crates/craftls/src/: lib.rs
crates/craftls/src/client/: hs.rs
crates/craftls/src/craft/: fingerprints.rs  mod.rs
crates/craftls/src/msgs/: handshake.rs
crates/craftls/src/tls13/: mod.rs
crates/vex-cli/: Cargo.toml
crates/vex-cli/src/: main.rs
crates/vex-core/: Cargo.toml
crates/vex-core/src/: lib.rs  system_proxy.rs
crates/vex-core/src/config/: clash.rs  model.rs  singbox.rs  subscription.rs  v2ray.rs
crates/vex-core/src/dns/: mod.rs
crates/vex-core/src/proxy/: factory.rs  http.rs  hysteria2.rs  mod.rs  pool.rs  quic_conn.rs  relay.rs  routing.rs  service.rs  speedtest.rs  ss.rs  transport.rs  trojan.rs  tuic.rs  tun.rs  vless.rs  vmess.rs
crates/vex-core/src/router/: engine.rs  geoip.rs
crates/vex-gui/: Cargo.toml  build.rs
crates/vex-gui/assets/: icon.icns
crates/vex-gui/src/: app.rs  log_buffer.rs  main.rs
crates/vex-gui/src/views/: home.rs
crates/xtune-cli/: Cargo.toml
crates/xtune-cli/src/: main.rs
crates/xtune-core/: Cargo.toml
crates/xtune-core/src/: lib.rs  system_proxy.rs
crates/xtune-core/src/config/: clash.rs  mod.rs  model.rs  singbox.rs  subscription.rs  v2ray.rs
crates/xtune-core/src/dns/: mod.rs
crates/xtune-core/src/proxy/: connector.rs  factory.rs  http.rs  hysteria2.rs  mod.rs  pool.rs  relay.rs  routing.rs  service.rs  socks5.rs  speedtest.rs  ss.rs  transport.rs  trojan.rs  tuic.rs  tun.rs  vless.rs  vmess.rs
crates/xtune-core/src/router/: china.rs  engine.rs  geoip.rs  mod.rs
crates/xtune-gui/: Cargo.toml
crates/xtune-gui/src/: app.rs  log_buffer.rs  main.rs
crates/xtune-gui/src/components/: mod.rs
crates/xtune-gui/src/views/: mod.rs
docs/: README.md  architecture.md  build-run-test.md  config-format.md  configuration.md  deep-analysis.mdx  development.md  getting-started.md  internals.mdx  merlin.md  optimization-guide.mdx  optimization-roadmap.mdx  plan.md  protocols.md  roadmap.md
docs/internals/: README.md  analysis.md  implementation.md  optimization.md
docs/site/: index.html
merlin/: README.md  config.yaml.template  install.sh  uninstall.sh
merlin/scripts/: dnsmasq.conf  iptables.sh  vex.sh
merlin/webui/cgi-bin/: vex.cgi
merlin/webui/pages/: vex.asp
merlin/webui/webs/: Module_vex.asp
src/: main.rs  utils.rs
src/dns/: mod.rs  parser.rs
src/packet/: mod.rs  tests.rs
src/proxy/: mod.rs  tcp.rs  udp.rs
