[workspace]
members = [
    "crates/vex-core",
    "crates/vex-gui",
    "crates/vex-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Vex Contributors"]

[workspace.dependencies]
# Internal crates
vex-core = { path = "crates/vex-core" }

# GPUI
gpui = "0.2.2"
gpui-component = "0.5.1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Networking
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }

# Crypto & proxy
shadowsocks = { version = "1", features = ["aead-cipher-2022"] }
quinn = "0.11"
sysproxy = "0.3.0"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.26"
craft-tls = { package = "tokio-rustls", version = "0.25" }
webpki-roots = "0.26"
rustls-pki-types = "1"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"

# TUN proxy
tun = { version = "0.8", features = ["async"] }
ipstack = "1.0.0"
etherparse = "0.19"

# Crypto primitives
sha2 = "0.10"
hex = "0.4"
md-5 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Utils
anyhow = "1"
thiserror = "2"
log = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.22"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
rand = "0.9"
socket2 = "0.5"
lru = "0.12"

[patch.crates-io]
rustls = { path = "crates/craftls" }
