[package]
name = "rustls"
version = "0.22.4"
edition = "2021"
rust-version = "1.66"
license = "Apache-2.0 OR ISC OR MIT"
description = "Craftls: Rustls fork with customizable ClientHello fingerprint."
homepage = "https://github.com/3andne/craftls"
repository = "https://github.com/3andne/craftls"
categories = ["network-programming", "cryptography"]
autobenches = false
build = "build.rs"

[lib]
name = "rustls"

[build-dependencies]
rustversion = { version = "1.0.6", optional = true }

[dependencies]
aws-lc-rs = { version = "1.5", optional = true }
log = { version = "0.4.4", optional = true }
ring = { version = "0.17", optional = true }
subtle = { version = "2.5.0", default-features = false }
webpki = { package = "rustls-webpki", version = "0.102", features = ["std"], default-features = false }
pki-types = { package = "rustls-pki-types", version = "1", features = ["std"] }
zeroize = "1.6.0"
static_init = "1.0.3" #!craft!
paste = "1.0.14" #!craft!
rand = "0.8.5" #!craft!

brotli = "3.4.0"
flate2 = "1.0.28"
zstd = "0.12.3"

[features]
default = ["logging", "ring", "tls12"]
logging = ["log"]
aws_lc_rs = ["dep:aws-lc-rs", "webpki/aws_lc_rs"]
ring = ["dep:ring", "webpki/ring"]
tls12 = []
read_buf = ["rustversion"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "rustls_pki_types::*",
]
