[package]
name = "vex-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vex-cli"
path = "src/main.rs"

[dependencies]
vex-core = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_yaml = { workspace = true }
