[package]
name = "vex-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vex"
path = "src/main.rs"

[build-dependencies]
# Windows: embed .ico into the executable
winresource = "0.1"

[dependencies]
vex-core = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
