[package]
name = "xtune-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
shadowsocks = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
