[package]
name = "xtune-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
lru = { workspace = true }
socket2 = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
craft-tls = { workspace = true }
webpki-roots = { workspace = true }
rustls-pki-types = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
md-5 = { workspace = true }
hmac = { workspace = true }
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
shadowsocks = { workspace = true }
quinn = { workspace = true }
h3 = { workspace = true }
h3-quinn = { workspace = true }
http = { workspace = true }
sysproxy = { workspace = true }
tun = { workspace = true }
ipstack = { workspace = true }
etherparse = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
