[package]
name = "xtune-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "xtune"
path = "src/main.rs"

[dependencies]
xtune-core = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
